--- a/style.css
+++ b/style.css
@@ -10,6 +10,15 @@ body{
     height: 100vh;
 }
 
+a{
+    text-decoration: none;
+    color: white;
+}
+a:visited,:active{
+    text-decoration: none;
+    color: white;
+}
+
 header{
     display: flex;
     justify-content: space-between;
